src/main/java/com/example/citronix/web/errors/ArbrePlantationMonthException.java
package com.example.citronix.web.errors;

public class ArbrePlantationMonthException extends RuntimeException{
    public ArbrePlantationMonthException(String message){super(message);}
}
